<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    tools:context=".VerifySMSActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/c2_blurred"
        android:scaleType="centerCrop"/>

    <ProgressBar
        android:id="@+id/verify_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="@dimen/spinner_size"
        android:layout_height="@dimen/spinner_size"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/input_view">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_enter_sms_code"
            style="?android:textAppearanceMedium"
            android:textColor="@color/chaverim_background_dark_text_color"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_code_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/sms_code"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_button_label"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:id="@+id/verify_button"
            android:textColor="@color/chaverim_background_dark_text_color"/>
    </LinearLayout>
</FrameLayout>