<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.chaverim5t.chaverim.ui.NewCallFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_call_quick_button_height"
            android:orientation="horizontal">
            <!-- TODO(yakov): Update these images! -->
            <ImageView
                android:layout_width="@dimen/new_call_quick_button_width"
                android:layout_height="@dimen/new_call_quick_button_height"
                android:src="@drawable/flat"
                android:layout_marginRight="8dp"
                android:id="@+id/quick_button_flat"/>
            <ImageView
                android:layout_width="@dimen/new_call_quick_button_width"
                android:layout_height="@dimen/new_call_quick_button_height"
                android:src="@drawable/boost"
                android:layout_marginRight="8dp"
                android:id="@+id/quick_button_boost"/>
            <ImageView
                android:layout_width="@dimen/new_call_quick_button_width"
                android:layout_height="@dimen/new_call_quick_button_height"
                android:src="@drawable/car_lockout"
                android:layout_marginRight="8dp"
                android:id="@+id/quick_button_car_lockout"/>
            <ImageView
                android:layout_width="@dimen/new_call_quick_button_width"
                android:layout_height="@dimen/new_call_quick_button_height"
                android:src="@drawable/house_lockout"
                android:layout_marginRight="8dp"
                android:id="@+id/quick_button_house_lockout"/>
            <ImageView
                android:layout_width="@dimen/new_call_quick_button_width"
                android:layout_height="@dimen/new_call_quick_button_height"
                android:src="@drawable/dot_dot_dot"
                android:id="@+id/quick_button_more"/>
        </LinearLayout>
        <!-- Perhaps an AutoCompleteTextView? -->
        <TextView
            style="?android:editTextStyle"
            android:id="@+id/problem_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_call_problem"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="none"
            tools:ignore="HardcodedText"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caller_number_text"
            android:hint="@string/hint_new_call_phone_number"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="phone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caller_name_text"
            android:hint="@string/hint_new_call_caller_name"
            android:maxLines="1"
            android:singleLine="true"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/caller_address"
            android:hint="@string/hint_new_call_address_or_location"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:singleLine="true"/>
        <!-- TODO(yakov): Lay this out more nicely! -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_call_call_area_label_height"
            android:orientation="horizontal"
            tools:ignore="HardcodedText">
            <TextView
                android:id="@+id/new_call_area_b"
                android:text="B"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_f"
                android:text="F"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_i"
                android:text="I"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_l"
                android:text="L"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_c"
                android:text="C"
                style="@style/newCallCallAreaTextStyle"
                android:background="@color/primary_material_dark"
                android:textColor="@color/primary_material_light"/>
            <TextView
                android:id="@+id/new_call_area_w"
                android:text="W"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_h"
                android:text="H"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_o"
                android:text="O"
                style="@style/newCallCallAreaTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_call_call_area_label_height"
            android:orientation="horizontal"
            tools:ignore="HardcodedText">
            <TextView
                android:id="@+id/new_call_area_vs"
                android:text="VS"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_jfk"
                android:text="JFK"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_878"
                android:text="878"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_gn"
                android:text="GN"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_kgh"
                android:text="KGH"
                style="@style/newCallCallAreaTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_call_call_area_label_height"
            android:orientation="horizontal"
            tools:ignore="HardcodedText">
            <TextView
                android:id="@+id/new_call_area_fh"
                android:text="FH"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_ab"
                android:text="AB"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_lb"
                android:text="LB"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_bh"
                android:text="BH"
                style="@style/newCallCallAreaTextStyle"/>
            <TextView
                android:id="@+id/new_call_area_other"
                android:text="OTHER"
                style="@style/newCallCallAreaTextStyle"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_call_other_call_area"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/other_call_area_text"
            />
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle"
            android:hint="@string/hint_new_call_vehicle_description"
            android:maxLines="1"
            android:singleLine="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_call_note_for_members"
            android:textSize="18sp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:id="@+id/note"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_call_create_and_dispatch_button_label"
            android:id="@+id/create_and_dispatch_button"/>
    </LinearLayout>
</ScrollView>
